src/app/app.component.scss
$border-color: grey;

strong {
    cursor: pointer;
    user-select: none;
    background-color: rgb(255, 232, 44);
    color: black;
    padding: 0rem 0.1rem 0rem 0.1rem;
    border: 1px solid rgb(255, 232, 44);

    &:hover {
        background-color: black;
        color: white;
        border: 1px solid grey;
    }
}

h1 {
    place-self: center;
    margin-bottom: 0rem;
    color: black;
    font-family: "CATS Goth", "Roboto Mono", sans-serif;
    font-size: 4rem;
}

.morale-font {
    font-weight: bold;
}

.apocalypse-font {
    font-family: "CATS Goth", "Roboto Mono", sans-serif;
    &.big {
        font-size: 1.5rem;
    }
    &.mork {
        font-size: 1rem;
    }
}

em {
    font-size: .8rem;
    color: grey;
}

.npc-gen-grid {
    display: grid;
    place-content: center;
    grid-gap: 1rem;

    div.sections {
        border-top: 1px solid $border-color;
        padding-top: 1rem;

        &.name-section {
            text-align: center;
        }
    }

    div.inner-section {
        padding-top: 1rem;
    }

    .link {
        place-self: center;

        margin-bottom: 0.5rem;
        font-size: 0.6rem;
        color: grey;
        display: grid;
        place-items: center;
        grid-gap: 0.5rem;
        a {
            color: black;
            &:hover {
                color: white;
            }
        }

        .copyButton {
            font-size: 0.9rem;
        }
    }

    .hireling-mechanics {
        display: grid;
        grid-template-rows: repeat(2, min-content);
        grid-template-columns: 1fr;

        .reaction-section {
            padding-bottom: 0.5rem;
            place-self: center;
        }

        .double-columns {
            padding-top: 0.5rem;
            display: grid;
            grid-template-columns: repeat(2, 1fr);
            grid-template-rows: 1fr;

            .speciality-section {
                border-right: 1px solid $border-color;
                padding-right: 0.5rem;
            }
            .morale-and-values-section {
                padding-left: 0.5rem;
                display: grid;
                grid-template-columns: 1fr;
                grid-gap: 1rem;
            }
        }
    }
}

.center {
    display: grid;
    place-self: center;

    em {
        place-self: center;
    }

    &.reroll {
        font-size: .9rem;
    }
}

@media only screen and (min-width: 768px) {
    .npc-gen-grid {
        max-width: 53%;
        margin: auto;

        .link {
            position: absolute;
            bottom: 0;
            font-size: 0.8rem;
        }
    }
}

